<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.pucrio.inf.lac.mhub.ui.MHubViewer">

    <LinearLayout
        android:id="@+id/generalsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/text_latitude"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/text_longitude"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textLatitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_default"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textLongitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_default"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <ImageView
            android:id="@+id/connectionState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_gravity="center_vertical|end"
            android:contentDescription="@string/desc"
            android:gravity="end"
            android:src="@drawable/con_off" />

    </LinearLayout>

    <View
        android:id="@+id/separator"
        android:layout_below="@+id/generalsLayout"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:background="@android:color/darker_gray" />

    <ExpandableListView
        android:id="@+id/lvExp"
        android:layout_below="@+id/separator"
        android:layout_height="match_parent"
        android:layout_width="match_parent"/>

</RelativeLayout>